--- a/100回めざまし！/Base.lproj/Main.storyboard
+++ b/100回めざまし！/Base.lproj/Main.storyboard
@@ -13,10 +13,23 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="hhE-YH-vFa">
+                                <rect key="frame" x="-17" y="214" width="600" height="162"/>
+                                <date key="date" timeIntervalSinceReferenceDate="456839295.22302198">
+                                    <!--2015-06-24 11:48:15 +0000-->
+                                </date>
+                                <connections>
+                                    <action selector="changeDatePicker:" destination="vXZ-lx-hvc" eventType="valueChanged" id="Uv2-gI-Qiq"/>
+                                </connections>
+                            </datePicker>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
